--- a/src/content/docs/en/recipes/streaming-improve-page-performance.mdx
+++ b/src/content/docs/en/recipes/streaming-improve-page-performance.mdx
@@ -56,8 +56,8 @@ The Astro page below using these components can render parts of the page sooner.
 
 ```astro title="src/pages/index.astro"
 ---
-import RandomName from '../components/RandomName.astro'
-import RandomFact from '../components/RandomFact.astro'
+import RandomName from '../components/RandomName.astro';
+import RandomFact from '../components/RandomFact.astro';
 ---
 <html>
   <head>
